Sync auth pages and setup from local to repo

--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,11 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/gameday?schema=publi
 # Authentication (NextAuth.js) - Phase 2
 # -----------------------------------------
 # Generate with: openssl rand -base64 32
-NEXTAUTH_SECRET="your-secret-key-here-generate-with-openssl"
-NEXTAUTH_URL="http://localhost:3000"
+# In production, this MUST be a strong random string
+AUTH_SECRET="your-secret-key-here-generate-with-openssl"
+
+# Only needed in production (auto-detected in development)
+# AUTH_URL="http://localhost:3000"
 
 # -----------------------------------------
 # Email Service (Resend) - Phase 4
